--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asttokens==3.0.0
+blinker==1.9.0
 click==8.2.1
 colorama==0.4.6
 comm==0.2.3
@@ -7,16 +8,22 @@ cycler==0.12.1
 debugpy==1.8.16
 decorator==5.2.1
 executing==2.2.1
+Flask==3.1.2
+Flask-SQLAlchemy==3.1.1
 fonttools==4.59.2
+greenlet==3.2.4
 gunicorn==23.0.0
 ipykernel==6.30.1
 ipython==9.5.0
 ipython_pygments_lexers==1.1.1
+itsdangerous==2.2.0
 jedi==0.19.2
+Jinja2==3.1.6
 joblib==1.5.2
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 kiwisolver==1.4.9
+MarkupSafe==3.0.2
 matplotlib==3.10.6
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
@@ -34,14 +41,18 @@ Pygments==2.19.2
 pyparsing==3.2.4
 python-dateutil==2.9.0.post0
 pytz==2025.2
+pywin32==311
 pyzmq==27.1.0
 regex==2025.9.1
 seaborn==0.13.2
 six==1.17.0
+SQLAlchemy==2.0.43
 stack-data==0.6.3
 tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
+typing_extensions==4.15.0
 tzdata==2025.2
 wcwidth==0.2.13
 webencodings==0.5.1
+Werkzeug==3.1.3
